--- a/Tugas2 - Berlatih CSS/about.html
+++ b/Tugas2 - Berlatih CSS/about.html
@@ -20,99 +20,100 @@
         </ul>
     </header>
 
-    <main></main>
-    <div id="article-list">
-        <h1>Featured Posts</h1>
-        <article>
-            <a href="">
-                <h3>Lorem Post 1</h3>
-            </a>
-            <p>
-                Lorem Ipsum Dolor Sit Amet, mea te verear signiferumque, per illum labores ne. Blandit omnesque
-                scripserit pri ex, et pri dicant eirmod deserunt.
-                Aeque perpetua ea nec. Sit erant patrioque delicatissimi ut. Et sea quem sint, nam in minim
-                voluptatibus. Etiam placerat eam in.
-            </p>
-        </article>
-        <article>
-            <a href="">
-                <h3>Lorem Post 2</h3>
-            </a>
-            <p>
-                Lorem Ipsum Dolor Sit Amet, mea te verear signiferumque, per illum labores ne. Blandit omnesque
-                scripserit pri ex, et pri dicant eirmod deserunt.
-                Aeque perpetua ea nec. Sit erant patrioque delicatissimi ut. Et sea quem sint, nam in minim
-                voluptatibus. Etiam placerat eam in.
-            </p>
-        </article>
-        <article>
-            <a href="">
-                <h3>Lorem Post 3</h3>
-            </a>
-            <p>
-                Lorem Ipsum Dolor Sit Amet, mea te verear signiferumque, per illum labores ne. Blandit omnesque
-                scripserit pri ex, et pri dicant eirmod deserunt.
-                Aeque perpetua ea nec. Sit erant patrioque delicatissimi ut. Et sea quem sint, nam in minim
-                voluptatibus. Etiam placerat eam in.
-            </p>
-        </article>
-        <article>
-            <a href="">
-                <h3>Lorem Post 4</h3>
-            </a>
-            <p>
-                Lorem Ipsum Dolor Sit Amet, mea te verear signiferumque, per illum labores ne. Blandit omnesque
-                scripserit pri ex,
-                et pri dicant eirmod deserunt. Aeque perpetua ea nec. Sit erant patrioque delicatissimi ut. Et sea quem
-                sint, nam in minim voluptatibus. Etiam placerat eam in.
-            </p>
-        </article>
-        <article>
-            <a href="">
-                <h3>Lorem Post 5</h3>
-            </a>
-            <p>
-                Lorem Ipsum Dolor Sit Amet, mea te verear signiferumque, per illum labores ne. Blandit omnesque
-                scripserit pri ex, et pri dicant eirmod deserunt.
-                Aeque perpetua ea nec. Sit erant patrioque delicatissimi ut. Et sea quem sint, nam in minim
-                voluptatibus. Etiam placerat eam in.
-            </p>
-        </article>
-        <article>
-            <a href="">
-                <h3>Lorem Post 6</h3>
-            </a>
-            <p>
-                Lorem Ipsum Dolor Sit Amet, mea te verear signiferumque, per illum labores ne. Blandit omnesque
-                scripserit pri ex, et pri dicant eirmod deserunt.
-                Aeque perpetua ea nec. Sit erant patrioque delicatissimi ut. Et sea quem sint, nam in minim
-                voluptatibus. Etiam placerat eam in.
-            </p>
-        </article>
-        <article>
-            <a href="">
-                <h3>Lorem Post 7</h3>
-            </a>
-            <p>
-                Lorem Ipsum Dolor Sit Amet, mea te verear signiferumque, per illum labores ne. Blandit omnesque
-                scripserit pri ex, et pri dicant eirmod deserunt.
-                Aeque perpetua ea nec. Sit erant patrioque delicatissimi ut. Et sea quem sint, nam in minim
-                voluptatibus. Etiam placerat eam in.
-            </p>
-        </article>
-        <article>
-            <a href="">
-                <h3>Lorem Post 8</h3>
-            </a>
-            <p>
-                Lorem Ipsum Dolor Sit Amet, mea te verear signiferumque, per illum labores ne. Blandit omnesque
-                scripserit pri ex, et pri dicant eirmod deserunt.
-                Aeque perpetua ea nec. Sit erant patrioque delicatissimi ut. Et sea quem sint, nam in minim
-                voluptatibus. Etiam placerat eam in.
-            </p>
-        </article>
-    </div>
-
+    <main>
+        <div id="article-list">
+            <h1>Featured Posts</h1>
+            <article>
+                <a href="">
+                    <h3>Lorem Post 1</h3>
+                </a>
+                <p>
+                    Lorem Ipsum Dolor Sit Amet, mea te verear signiferumque, per illum labores ne. Blandit omnesque
+                    scripserit pri ex, et pri dicant eirmod deserunt.
+                    Aeque perpetua ea nec. Sit erant patrioque delicatissimi ut. Et sea quem sint, nam in minim
+                    voluptatibus. Etiam placerat eam in.
+                </p>
+            </article>
+            <article>
+                <a href="">
+                    <h3>Lorem Post 2</h3>
+                </a>
+                <p>
+                    Lorem Ipsum Dolor Sit Amet, mea te verear signiferumque, per illum labores ne. Blandit omnesque
+                    scripserit pri ex, et pri dicant eirmod deserunt.
+                    Aeque perpetua ea nec. Sit erant patrioque delicatissimi ut. Et sea quem sint, nam in minim
+                    voluptatibus. Etiam placerat eam in.
+                </p>
+            </article>
+            <article>
+                <a href="">
+                    <h3>Lorem Post 3</h3>
+                </a>
+                <p>
+                    Lorem Ipsum Dolor Sit Amet, mea te verear signiferumque, per illum labores ne. Blandit omnesque
+                    scripserit pri ex, et pri dicant eirmod deserunt.
+                    Aeque perpetua ea nec. Sit erant patrioque delicatissimi ut. Et sea quem sint, nam in minim
+                    voluptatibus. Etiam placerat eam in.
+                </p>
+            </article>
+            <article>
+                <a href="">
+                    <h3>Lorem Post 4</h3>
+                </a>
+                <p>
+                    Lorem Ipsum Dolor Sit Amet, mea te verear signiferumque, per illum labores ne. Blandit omnesque
+                    scripserit pri ex,
+                    et pri dicant eirmod deserunt. Aeque perpetua ea nec. Sit erant patrioque delicatissimi ut. Et sea
+                    quem
+                    sint, nam in minim voluptatibus. Etiam placerat eam in.
+                </p>
+            </article>
+            <article>
+                <a href="">
+                    <h3>Lorem Post 5</h3>
+                </a>
+                <p>
+                    Lorem Ipsum Dolor Sit Amet, mea te verear signiferumque, per illum labores ne. Blandit omnesque
+                    scripserit pri ex, et pri dicant eirmod deserunt.
+                    Aeque perpetua ea nec. Sit erant patrioque delicatissimi ut. Et sea quem sint, nam in minim
+                    voluptatibus. Etiam placerat eam in.
+                </p>
+            </article>
+            <article>
+                <a href="">
+                    <h3>Lorem Post 6</h3>
+                </a>
+                <p>
+                    Lorem Ipsum Dolor Sit Amet, mea te verear signiferumque, per illum labores ne. Blandit omnesque
+                    scripserit pri ex, et pri dicant eirmod deserunt.
+                    Aeque perpetua ea nec. Sit erant patrioque delicatissimi ut. Et sea quem sint, nam in minim
+                    voluptatibus. Etiam placerat eam in.
+                </p>
+            </article>
+            <article>
+                <a href="">
+                    <h3>Lorem Post 7</h3>
+                </a>
+                <p>
+                    Lorem Ipsum Dolor Sit Amet, mea te verear signiferumque, per illum labores ne. Blandit omnesque
+                    scripserit pri ex, et pri dicant eirmod deserunt.
+                    Aeque perpetua ea nec. Sit erant patrioque delicatissimi ut. Et sea quem sint, nam in minim
+                    voluptatibus. Etiam placerat eam in.
+                </p>
+            </article>
+            <article>
+                <a href="">
+                    <h3>Lorem Post 8</h3>
+                </a>
+                <p>
+                    Lorem Ipsum Dolor Sit Amet, mea te verear signiferumque, per illum labores ne. Blandit omnesque
+                    scripserit pri ex, et pri dicant eirmod deserunt.
+                    Aeque perpetua ea nec. Sit erant patrioque delicatissimi ut. Et sea quem sint, nam in minim
+                    voluptatibus. Etiam placerat eam in.
+                </p>
+            </article>
+        </div>
+    </main>
     <footer>
         <h2 class="penutup">Penutup</h2>
     </footer>
